--- a/src/styles/pos/_receipt.scss
+++ b/src/styles/pos/_receipt.scss
@@ -4,11 +4,10 @@
   float: left; width: 42.3572%;
   margin-left: $hoztSpace;
   .fr-control {
-    &:first-child {border-bottom: $border solid 1px; margin-bottom: 15px;}
+    // &:first-child {border-bottom: $border solid 1px; margin-bottom: 15px;}
     li {
       padding-left: 136px; margin-bottom: 34px;
-      label {width: 136px;}
-      .select-wrapper {width: 73.8461%;}
+      label {width: 136px;}      
       textarea {height: 87px; margin-bottom: 9px;}
       button {
         &.trans {
